router/apollo-router/tests/snapshots/apollo_reports__stats_mocked.snap
---
source: apollo-router/tests/apollo_reports.rs
expression: stats
---
context:
  client_name: ""
  client_version: ""
  operation_type: query
  operation_subtype: ""
query_latency_stats:
  latency_count: "[latency_count]"
  request_count: 1
  cache_hits: 0
  persisted_query_hits: 0
  persisted_query_misses: 0
  cache_latency_count:
    - 0
  root_error_stats:
    children:
      "service:accounts":
        children:
          _entities:
            children:
              name:
                children: {}
                errors_count: 1
                requests_with_errors_count: 1
            errors_count: 0
            requests_with_errors_count: 0
        errors_count: 0
        requests_with_errors_count: 0
      "service:products":
        children:
          topProducts:
            children: {}
            errors_count: 2
            requests_with_errors_count: 1
        errors_count: 0
        requests_with_errors_count: 0
    errors_count: 0
    requests_with_errors_count: 0
  requests_with_errors_count: 1
  public_cache_ttl_count:
    - 0
  private_cache_ttl_count:
    - 0
  registered_operation_count: 0
  forbidden_operation_count: 0
  requests_without_field_instrumentation: 0
per_type_stat:
  Product:
    per_field_stat:
      name:
        return_type: String
        errors_count: 0
        observed_execution_count: 3
        estimated_execution_count: 3
        requests_with_errors_count: 0
        latency_count:
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 2
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 1
      reviews:
        return_type: "[Review]"
        errors_count: 0
        observed_execution_count: 3
        estimated_execution_count: 3
        requests_with_errors_count: 0
        latency_count:
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 1
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 2
      upc:
        return_type: String!
        errors_count: 0
        observed_execution_count: 3
        estimated_execution_count: 3
        requests_with_errors_count: 0
        latency_count:
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 1
          - 0
          - 0
          - 1
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 1
  Query:
    per_field_stat:
      _entities:
        return_type: "[_Entity]!"
        errors_count: 0
        observed_execution_count: 2
        estimated_execution_count: 2
        requests_with_errors_count: 0
        latency_count:
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 1
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 1
      topProducts:
        return_type: "[Product]"
        errors_count: 2
        observed_execution_count: 1
        estimated_execution_count: 1
        requests_with_errors_count: 1
        latency_count:
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 1
  Review:
    per_field_stat:
      author:
        return_type: User
        errors_count: 0
        observed_execution_count: 4
        estimated_execution_count: 4
        requests_with_errors_count: 0
        latency_count:
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 1
          - 0
          - 1
          - 0
          - 0
          - 1
          - 0
          - 1
  User:
    per_field_stat:
      id:
        return_type: ID!
        errors_count: 0
        observed_execution_count: 4
        estimated_execution_count: 4
        requests_with_errors_count: 0
        latency_count:
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 2
          - 0
          - 1
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 1
      name:
        return_type: String
        errors_count: 1
        observed_execution_count: 2
        estimated_execution_count: 2
        requests_with_errors_count: 1
        latency_count:
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 1
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 0
          - 1

